site news! also get rid of enormous fonts import

--- a/_posts/2023-03-01-log-23-3.md
+++ b/_posts/2023-03-01-log-23-3.md
@@ -4,6 +4,8 @@ title:  "Development Log - Changes in March, 2023"
 tags: [devlog]
 ---
 
+_This page will be updated until the month is over._
+
 ## 16
 
 ##### Single-chapter stories now sync tags with their chapter
