dont delete docs

--- a/_posts/2023-03-01-log-23-3.md
+++ b/_posts/2023-03-01-log-23-3.md
@@ -6,6 +6,33 @@ tags: [devlog]
 
 _This page will be updated until the month is over._
 
+## 21
+
+
+#### Stuff Added
+
+- Ability to log in with Discord
+    - (We plan to add Twitter support, but our developer account hasn't been approved yet)
+- Adds [BuyMeACoffee](https://www.buymeacoffee.com/collaberotica) link in the footer
+- Links have been "slugified" 🐌
+    - before: `/stories/123/chapters/654`
+    - after: `/stories/123-story-name/chapters/654-chapter-name`
+- Chapters can now have gender pairing tags separate from the story
+- You no longer need your password to change your profile information 
+- Author names now appear on:
+  - Chapter links in the table of contents
+  - Chapter links on interactive choices
+- For linear stories, a "next" button appears aside the "previous" button in the chapter navbar
+- "What's New" page now lists items by creation date
+  - (A redesign for this page is planned)
+- Removed herobrine
+
+#### Bugs Swatted
+
+- Changing your avatar should no longer occasionally result in a 500 error
+- Fixed the visual appearance of some notifications
+
+
 ## 16
 
 ##### Single-chapter stories now sync tags with their chapter
