--- a/_posts/2023-03-01-log-23-3.md
+++ b/_posts/2023-03-01-log-23-3.md
@@ -6,7 +6,7 @@ tags: [devlog]
 
 _This page will be updated until the month is over._
 
-## 21
+## March 21
 
 
 #### Stuff Added
@@ -33,14 +33,14 @@ _This page will be updated until the month is over._
 - Fixed the visual appearance of some notifications
 
 
-## 16
+## March 16
 
 ##### Single-chapter stories now sync tags with their chapter
 
 - Otherwise they could have different tags
 - This only applies when: the story is linear, it has only one chapter, and the chapter is designated as "the end"
 
-## 14
+## March 14
 
 ##### Separated first-chapter creation from story creation
 
@@ -57,7 +57,7 @@ _This page will be updated until the month is over._
 
 <img src="/assets/img/323s1.png" width="400px" alt="search before">
 
-## 10
+## March 10
 
 ##### Registration opened
 
