--- a/_posts/2023-03-01-log-23-3.md
+++ b/_posts/2023-03-01-log-23-3.md
@@ -6,8 +6,20 @@ tags: [devlog]
 
 _This page will be updated until the month is over._
 
-## March 21
+## March 24
 
+### ✨ Stuff Added✨ 
+
+- The old What's New page is now the Browse page, with lots of toplists and featured stories. Check it out! 
+  - The Dashboard page has also been redesigned to match the new Browse page
+- Added a basic Tags page - you can sort through tags alphabetically, or by popularity
+  - More to come on this page in the future!
+- Tag limit is now 35, and stories' short descriptions are now limited to 400 characters
+
+### 🪲 Bugs Swatted 🪱 
+- Some caching issues have been fixed
+
+## March 21
 
 #### Stuff Added
 
