--- a/_posts/2023-03-01-log-23-3.md
+++ b/_posts/2023-03-01-log-23-3.md
@@ -6,6 +6,18 @@ tags: [devlog]
 
 _This page will be updated until the month is over._
 
+## March 30
+
+### ✨ Minor things! ✨ 
+
+- Added a basic share button to stories and chapters
+- Existing user profile badges look cooler
+- Added donor badges, although these can't be acquired yet
+
+Donor badges preview:
+
+<img src="/assets/img/badge_preview.gif" width="600px" alt="search after">
+
 ## March 24
 
 ### ✨ Stuff Added✨ 
