--- a/_posts/2023-03-01-log-23-3.md
+++ b/_posts/2023-03-01-log-23-3.md
@@ -11,6 +11,7 @@ _This page will be updated until the month is over._
 ### ✨ Minor things! ✨ 
 
 - Added a basic share button to stories and chapters
+- Added an example story to the intro page
 - Existing user profile badges look cooler
 - Added donor badges, although these can't be acquired yet
 
