--- a/_posts/2023-03-01-log-23-3.md
+++ b/_posts/2023-03-01-log-23-3.md
@@ -6,6 +6,18 @@ tags: [devlog]
 
 _This page will be updated until the month is over._
 
+## March 31
+### 📣 Changes 📣 
+- The like, dislike and follow buttons look better and more button-y
+- Added a "Recent" section on the browse page, to let you switch between new stories, chapters, and even polls
+- Added a cute sunrise to the beta tester badge
+
+### 🐞 Bugfixes 🐞 
+- You can't like/dislike/follow yourself or your work
+- Liking comments is fixed!
+- The profile page button that lets you message that user is also fixed
+- Author names on chapter choices no longer wrap strangely when they're long
+
 ## March 30
 
 ### ✨ Minor things! ✨ 
