--- a/_posts/2023-03-01-log-23-3.md
+++ b/_posts/2023-03-01-log-23-3.md
@@ -4,9 +4,8 @@ title:  "Development Log - Changes in March, 2023"
 tags: [devlog]
 ---
 
-_This page will be updated until the month is over._
+## March 31, 2023
 
-## March 31
 ### 📣 Changes 📣 
 - The like, dislike and follow buttons look better and more button-y
 - Added a "Recent" section on the browse page, to let you switch between new stories, chapters, and even polls
@@ -18,7 +17,7 @@ _This page will be updated until the month is over._
 - The profile page button that lets you message that user is also fixed
 - Author names on chapter choices no longer wrap strangely when they're long
 
-## March 30
+## March 30, 2023
 
 ### ✨ Minor things! ✨ 
 
@@ -31,7 +30,7 @@ Donor badges preview:
 
 <img src="/assets/img/badge_preview.gif" width="600px" alt="search after">
 
-## March 24
+## March 24, 2023
 
 ### ✨ Stuff Added✨ 
 
@@ -44,7 +43,7 @@ Donor badges preview:
 ### 🪲 Bugs Swatted 🪱 
 - Some caching issues have been fixed
 
-## March 21
+## March 21, 2023
 
 #### Stuff Added
 
@@ -70,14 +69,14 @@ Donor badges preview:
 - Fixed the visual appearance of some notifications
 
 
-## March 16
+## March 16, 2023
 
 ##### Single-chapter stories now sync tags with their chapter
 
 - Otherwise they could have different tags
 - This only applies when: the story is linear, it has only one chapter, and the chapter is designated as "the end"
 
-## March 14
+## March 14, 2023
 
 ##### Separated first-chapter creation from story creation
 
@@ -94,7 +93,7 @@ Donor badges preview:
 
 <img src="/assets/img/323s1.png" width="400px" alt="search before">
 
-## March 10
+## March 10, 2023
 
 ##### Registration opened
 
