--- a/_posts/2023-04-01-log-23-4.md
+++ b/_posts/2023-04-01-log-23-4.md
@@ -5,6 +5,19 @@ tags: [devlog]
 ---
 _This page will be updated until the month is over._
 
+
+## April 13, 2023
+
+### ✨ New Changes ✨ 
+- Added the [About Us](https://collaberotica.org/about) and [Donate](https://collaberotica.org/donate) pages
+- Added links to your unpublished stories on the Write Something page, in case you forgot about them
+
+### 🌈 Design Changes 🌈
+- Adjusted login, register pages
+- Enwidened the browse page
+- Chapter choices look much better on mobile
+- Experiment: removed the tags icon
+
 ## April 8, 2023 - New Editor!
 
 This is a big one. After careful consideration, we changed the rich text editor used throughout the site.
