--- a/_posts/2023-04-01-log-23-4.md
+++ b/_posts/2023-04-01-log-23-4.md
@@ -5,6 +5,12 @@ tags: [devlog]
 ---
 _This page will be updated until the month is over._
 
+## April 17, 2023
+
+### ✨ New Changes ✨ 
+- Added Twitter login. You can now register and log in with your Twitter account!
+- Fixed avatars uploads - newly uploaded avatars should look a lot better than before
+
 
 ## April 13, 2023
 
