--- a/_posts/2023-04-01-log-23-4.md
+++ b/_posts/2023-04-01-log-23-4.md
@@ -5,6 +5,37 @@ tags: [devlog]
 ---
 _This page will be updated until the month is over._
 
+## April 22, 2023
+
+
+### New Features ✨ 
+
+- <b>Add cover art to your stories!</b>
+    - Cover art is visible on the intro, table of contents, and story previews (in browse, search, etc.)
+    - Don't forget to add it to your current stories!
+
+<img src="/assets/img/cov2.png" width="474">
+
+- <b>You can now see who liked and followed things!</b>
+    - Although private likes/follows won't be shown, and neither will dislikes
+
+<img src="/assets/img/likes2.png" width="289">
+
+ - Added a feedback link to the navbar, so if you see something wrong, it's easy to let us know
+
+### Bugs Fixed 🪱 
+
+- Quality of uploaded images is really, finally fixed 
+    - (If your avatar looks pixelated, try reuploading it. It should be good now.)
+- Removed some unused code to speed the site up a little
+
+### Design Changes 👩‍🎨
+
+- Cleaned up stories and story cards to accommodate your new cover art
+- Also made view counts more visible there too
+- Made user profile page look cool
+- Links to some social media are on the browse page
+
 ## April 17, 2023
 
 ### ✨ New Changes ✨ 
