--- a/_posts/2023-05-01-log-23-5.md
+++ b/_posts/2023-05-01-log-23-5.md
@@ -16,4 +16,4 @@ To go to a tag page, click on any tag. Previously, clicking on a tag took you to
 
 ### Bugs Fixed 🪱 
 
-- <b>Various things fixed</b>
+Various things fixed
