--- a/_posts/2023-05-01-log-23-5.md
+++ b/_posts/2023-05-01-log-23-5.md
@@ -8,12 +8,14 @@ tags: [devlog]
 
 ### New Features ✨ 
 
-- <b>Tag page!</b>
+- <b>Tag pages!</b>
 
-We have added an overview page for each tag. It includes information like related tags, recent stories/chapters with that tag, as well as stats relating to popular stories/chapters.
+Every tag now has an overview page. The pages include information like related tags, recent stories/chapters with the tag, as well as stats relating to popular stories/chapters.
 
-To go to a tag page, click on any tag. Previously, clicking on a tag took you to a search page. Now you can start a search from buttons on the tag page.
+To go to a tag page, click on any tag. Tag pages also exist for the red gender pairing tags like "f/m", although not for the other colorful story property tags like "additions open", "interactive", "linear", etc.
 
-### Bugs Fixed 🪱 
+### Upcoming Features ⏰
 
-Various things fixed
+- <b>Import stories from external sites</b>
+
+Have you noticed the interactive stories that were imported from writing.com? This is a new feature we're working on! If you are the owner of an interactive story on writing.com, you'll be able to import it to Collaberotica. Other sites may also be available. We're currently working on a way to import stories from the site itself. But if you want your story imported now, <a href="https://collaberotica.org/conversations/new?users%5B%5D=4">contact Swai</a> and ask for your story to be imported.
