--- a/_posts/2023-05-01-log-23-5.md
+++ b/_posts/2023-05-01-log-23-5.md
@@ -4,6 +4,41 @@ title:  "Development Log - Changes in May, 2023"
 tags: [devlog]
 ---
 
+_This page will be updated until the month is over._
+
+## May 28, 2023
+
+### New Features ✨
+
+- <b>Import stories</b>
+
+You can now import interactive stories from Writing.com to our site!
+
+To get there, click the "write" button on the top navbar:
+
+<img src="/assets/img/528write.png" width="328"/>
+
+Then click the new "Import a Story" button:
+
+<img src="/assets/img/528import.png" width="397"/>
+
+And follow the instructions on the page. You must own the story to import it.
+
+- <b>Completed Tag</b>
+
+Stories are now marked as "completed" if they are:
+
+1. Linear stories
+2. With an ending
+
+Here is how it appears:
+
+<img src="/assets/img/528finished.png" width="589"/>
+
+You can also restrict searches to completed stories, or chapters from completed stories. The toggle is under "Advanced Filters" on the search page:
+
+<img src="/assets/img/528fsearch.png" width="272"/>
+
 ## May 19, 2023
 
 ### New Features ✨ 
