--- a/_posts/2023-05-01-log-23-5.md
+++ b/_posts/2023-05-01-log-23-5.md
@@ -24,6 +24,7 @@ Then click the new "Import a Story" button:
 
 And follow the instructions on the page. You must own the story to import it.
 
+
 - <b>Completed Tag</b>
 
 Stories are now marked as "completed" if they are:
@@ -35,9 +36,9 @@ Here is how it appears:
 
 <img src="/assets/img/528finished.png" width="589"/>
 
-You can also restrict searches to completed stories, or chapters from completed stories. The toggle is under "Advanced Filters" on the search page:
+You can also search by completed stories, or chapters from completed stories. The toggle is under "Advanced Filters" on the search page:
 
-<img src="/assets/img/528fsearch.png" width="272"/>
+<img src="/assets/img/528comps.png" width="566"/>
 
 ## May 19, 2023
 
