--- a/_posts/2023-05-01-log-23-5.md
+++ b/_posts/2023-05-01-log-23-5.md
@@ -10,7 +10,7 @@ _This page will be updated until the month is over._
 
 ### New Features ✨
 
-- <b>Import stories</b>
+- <b>Import Stories From Writing.com</b>
 
 You can now import interactive stories from Writing.com to our site!
 
