link to import a story

--- a/_posts/2023-05-01-log-23-5.md
+++ b/_posts/2023-05-01-log-23-5.md
@@ -14,7 +14,11 @@ _This page will be updated until the month is over._
 
 You can now import interactive stories from Writing.com to our site!
 
-To get there, click the "write" button on the top navbar:
+<a href="https://collaberotica.org/import_a_story">
+Import A Story
+</a>
+
+From the site, you can get there under the "write" button on the top navbar:
 
 <img src="/assets/img/528write.png" width="328"/>
 
