--- a/_posts/2023-09-01-log-23-9.md
+++ b/_posts/2023-09-01-log-23-9.md
@@ -1,12 +1,10 @@
 ---
 layout: post
-title:  "Development Log - Changes in September, 2023"
+title:  "Changes in September, 2023"
 tags: [devlog]
 ---
 
 ## September 1, 2023
-
-Hey, it's been a while!
 
 ### New Changes ✨
 
